--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Noughts and Crosses</title>
 </head>
 <body>
-    
+    <div id="game-container">
+        
+    </div>
 </body>
 </html>
