--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="game-container">
-
-    </div>
+    <div id="game-container"></div>
+    <div id="result"></div>
     <script src="script.js"></script>
 </body>
 </html>
