--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     
     <div id="game-container"></div>
     
-    <div id="result"></div>
-
-
-
+    <div id="message"></div>
+    <button id="play-again">Play Again</button>
 
     <script src="script.js"></script>
 </body>
