Add basic styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Noughts and Crosses</h1>
+    </header>
     
     <div id="input-container">
         <input type="text" id="playerone-name" placeholder="Player One Name">
